# Renderer

./: .gitmodules  CMakeLists.txt  shader.frag  shader.vert
lib/: CMakeLists.txt  Context.cpp  Context.hpp  GAPI.hpp  Instance.hpp  R1.cpp  R1Impl.hpp  R1SDL2.cpp  R1Wayland.cpp  R1Win32.cpp  R1XCB.cpp  R1Xlib.cpp  Scene.cpp  Scene.hpp  Swapchain.cpp  Swapchain.hpp  Swapchain.inl  Types.hpp
lib/Common/: CMakeLists.txt  Interfaces.hpp  Ref.hpp  Types.hpp  Util.hpp
lib/Common/include/Common/: Array.hpp  Command.hpp  Context.hpp  Declarations.hpp  Device.hpp  Format.hpp  Image.hpp  Instance.hpp  Pipeline.hpp  Queue.hpp  Types.hpp
lib/GAPI/: CMakeLists.txt
lib/GAPI/GAL/: CMakeLists.txt
lib/GAPI/GAL/OpenGL/: CMakeLists.txt  EGLRAII.hpp  GLContext.cpp  GLInstance.hpp
lib/GAPI/GAL/OpenGL/include/: OpenGLContext.hpp  OpenGLInstance.hpp
lib/GAPI/GAL/OpenGL/lib/: APIXlib.cpp  CMakeLists.txt  EGLRAII.hpp  GLUtil.hpp  Instance.cpp  Instance.hpp
lib/GAPI/GAL/Vulkan/: CMakeLists.txt
lib/GAPI/GAL/Vulkan/include/: VulkanBuffer.hpp  VulkanCommand.hpp  VulkanContext.hpp  VulkanContext.inl  VulkanDescriptors.hpp  VulkanDevice.hpp  VulkanFormat.hpp  VulkanImage.hpp  VulkanInline.inl  VulkanInstance.hpp  VulkanPipeline.hpp  VulkanPipelineStages.hpp  VulkanQueue.hpp  VulkanQueue.inl  VulkanSwapchain.hpp  VulkanSync.hpp  VulkanTypes.hpp
lib/GAPI/GAL/Vulkan/lib/: APISDL2.cpp  APIWayland.cpp  APIWin32.cpp  APIXCB.cpp  APIXlib.cpp  Buffer.cpp  BufferImpl.hpp  CMakeLists.txt  Command.cpp  CommandImpl.hpp  CommandImpl.inl  Context.cpp  ContextImpl.hpp  Descriptors.cpp  DeviceImpl.hpp  DeviceImpl.inl  GenerateDispatchTable.py  Image.cpp  ImageImpl.hpp  ImageImpl.inl  Instance.cpp  InstanceImpl.hpp  Pipeline.cpp  Queue.cpp  QueueImpl.hpp  QueueImpl.inl  Swapchain.cpp  SwapchainImpl.hpp  Sync.cpp  SyncImpl.hpp  VKRAII.hpp  VKUtil.hpp
lib/GAPI/GAL/Vulkan/progs/: CMakeLists.txt  VKCreateContexts.cpp  VKListDevices.cpp
lib/GAPI/GAL/include/: CommandCommon.hpp  ContextCommon.hpp  DeviceCommon.hpp  DeviceDefault.hpp  ImageCommon.hpp  InstanceCommon.hpp  PipelineCommon.hpp  QueueCommon.hpp  SwapchainCommon.hpp  SyncCommon.hpp
lib/GAPI/GAL/include/GAL/: BaseTypes.hpp  Buffer.hpp  Command.hpp  Context.hpp  Descriptors.hpp  Format.hpp  GAL.hpp  GALSDL2.hpp  GALWayland.hpp  GALWin32.hpp  GALXCB.hpp  GALXlib.hpp  Image.hpp  Instance.hpp  Pipeline.hpp  PipelineStages.hpp  Queue.hpp  Sync.hpp  (+3 more)
lib/GAPI/GAL/progs/: CMakeLists.txt  GALCreateContexts.cpp  GALCreateContextsBase.hpp  GALCreateContextsSDL2.cpp  GALCreateContextsWayland.cpp  GALCreateContextsWin32.cpp  GALCreateContextsXCB.cpp  GALCreateContextsXlib.cpp  GALListDevicesBase.hpp  GALListDevicesSDL2.cpp  GALListDevicesWayland.cpp  GALListDevicesWin32.cpp  GALListDevicesXCB.cpp  GALListDevicesXlib.cpp
lib/GAPI/include/Common/: Declarations.hpp  Flags.hpp  Handle.hpp  RAII.hpp  SlotMap.hpp  Vector.hpp
lib/GAPI/include/GAPI/: APIXCB.hpp  APIXlib.hpp  BufferAllocator.hpp  Command.hpp  Context.hpp  Format.hpp  GALRAII.hpp  GAPIRAII.hpp  GAPIXlib.hpp  Instance.hpp  SDL2.hpp  Swapchain.hpp  Wayland.hpp  Win32.hpp  XCB.hpp  Xlib.hpp
lib/GAPI/lib/: CMakeLists.txt  Context.cpp  ContextImpl.hpp  Instance.cpp  Swapchain.cpp
lib/GAPI/lib/Vulkan/: CMakeLists.txt  VulkanContext.cpp
lib/GL/: CMakeLists.txt  EGLRAII.hpp  GLContext.hpp  GLInstance.hpp  GLTypes.hpp
lib/GL/progs/: CMakeLists.txt  GLListDevices.cpp
lib/OpenGL/cmake/: Findglad2.cmake
lib/Rendering/: CMakeLists.txt
lib/Rendering/Common/: CMakeLists.txt
lib/Rendering/OpenGL/: GLInstance.cpp  GLTypes.hpp
lib/Rendering/OpenGL/progs/: GLCreateContexts.cpp
lib/Rendering/Vulkan/: VKImage.cpp  VKImage.hpp  VKInstance.cpp  VKInstance.hpp
lib/Rendering/Vulkan/lib/: APIXCB.cpp  APIXlib.cpp  CMakeLists.txt  Command.cpp  CommandImpl.hpp  CommandImpl.inl  Context.cpp  ContextImpl.hpp  DeviceImpl.hpp  DeviceImpl.inl  Image.cpp  ImageImpl.hpp  ImageImpl.inl  InstanceImpl.hpp  Pipeline.cpp  Queue.cpp  Swapchain.cpp  SwapchainImpl.hpp  SwapchainImpl.inl  Sync.cpp  VKRAII.hpp  VKUtil.hpp
lib/Rendering/Vulkan/progs/: CMakeLists.txt  VKCreateContexts.cpp  VKListDevices.cpp
lib/Rendering/include/Rendering/: APIXCB.hpp  APIXlib.hpp  Context.hpp  GAPI.hpp  GAPIRAII.hpp  GAPIXCB.hpp  Instance.hpp  Swapchain.hpp
lib/Rendering/lib/: APIXCB.cpp  APIXlib.cpp  CMakeLists.txt  Context.cpp  Instance.cpp  Swapchain.cpp
lib/VK/: CMakeLists.txt  VKContext.cpp  VKContext.hpp  VKContextDraw.cpp  VKFormat.hpp  VKInstance.cpp  VKInstance.hpp  VKPipeline.cpp  VKPipeline.hpp  VKPipelineBuilder.cpp  VKPipelineBuilder.hpp  VKRAII.hpp  VKShaderModule.hpp  VKSwapchain.cpp  VKSwapchain.hpp  VKSync.hpp  VKUtil.hpp
lib/VK/progs/: CMakeLists.txt  VKCreateContexts.cpp  VKListDevices.cpp
lib/Vulkan/: CMakeLists.txt  R1Vulkan.cpp  R1VulkanContext.hpp  R1VulkanImpl.hpp  R1VulkanInstance.hpp  R1VulkanScene.hpp  R1VulkanSwapchain.hpp  VKFormat.hpp  VKRAII.hpp  VKSwapchain.cpp  VKSwapchain.hpp  VKTypes.hpp  VKUtil.hpp  VulkanScene.cpp  VulkanSwapchain.cpp
lib/Vulkan/include/Vulkan/: API.hpp  APIXCB.decl.hpp  APIXCB.hpp  APIXCB.inl  APIXlib.decl.hpp  APIXlib.hpp  APIXlib.inl  Buffer.hpp  Command.hpp  Context.decl.hpp  Context.hpp  Context.inl  Device.hpp  Image.hpp  Instance.decl.hpp  Instance.hpp  Instance.inl  Pipeline.decl.hpp  Pipeline.hpp  Pipeline.inl  Sync.hpp  Types.hpp  VKRAII.hpp
lib/Vulkan/lib/: APIXCB.cpp  APIXlib.cpp  CMakeLists.txt  Command.cpp  CommandImpl.hpp  CommandImpl.inl  Context.cpp  ContextImpl.hpp  DeviceImpl.hpp  Image.cpp  ImageImpl.hpp  ImageImpl.inl  Instance.cpp  InstanceImpl.hpp  Internal.decl.hpp  Internal.hpp  Internal.inl  Pipeline.cpp  PipelineImpl.hpp  PipelineImpl.inl  VKRAII.hpp  VKUtil.hpp
lib/Vulkan/progs/: CMakeLists.txt  VKCreateContexts.cpp  VKListDevices.cpp
lib/shaders/: Interface.glsl  shader.frag  shader.vert
progs/: CMakeLists.txt  DrawLoadedMesh.cpp  DrawRotatingTriangle.cpp  DrawTriangle.cpp  DrawTriangleBase.hpp  DrawTriangleSDL2.cpp  DrawTriangleWayland.cpp  DrawTriangleWin32.cpp  DrawTriangleXCB.cpp  DrawTriangleXlib.cpp  DrawTriangles.cpp  ProgsCommon.hpp
(+40 files in other folders)
