find_package(SDL2)
find_package(X11 COMPONENTS X11_xcb)

if (TARGET SDL2::SDL2)
    add_executable(GLListDevices GLListDevices.cpp)
    target_link_libraries(GLListDevices R1GLAPI SDL2::SDL2)
    target_include_directories(GLListDevices PRIVATE ..)

    if (TARGET X11::X11)
        target_compile_definitions(GLListDevices PRIVATE HAVE_X11)
    endif()
    if (TARGET X11::X11_xcb)
        target_link_libraries(GLListDevices X11::X11_xcb)
        target_compile_definitions(GLListDevices PRIVATE HAVE_XLIB_XCB)
    endif()
    
    add_executable(GLCreateContexts GLCreateContexts.cpp)
    target_link_libraries(GLCreateContexts R1GLAPI SDL2::SDL2)
    target_include_directories(GLCreateContexts PRIVATE ..)

    if (TARGET X11::X11)
        target_compile_definitions(GLCreateContexts PRIVATE HAVE_X11)
    endif()
    if (TARGET X11::X11_xcb)
        target_link_libraries(GLCreateContexts X11::X11_xcb)
        target_compile_definitions(GLCreateContexts PRIVATE HAVE_XLIB_XCB)
    endif()
endif()
